force-app/main/default/objects/trailheadapp__Badge__c/fields/myT_CPQ_Solution_Training__c.field-meta.xml
<CustomField>
    <fullName>myT_CPQ_Solution_Training__c</fullName>
    <description>Used for filtering myT content</description>
    <formula>IF (
Name = &apos;Pricing&apos;||
Name = &apos;Quote Line Pricing&apos;||
Name = &apos;CPQ Setup&apos;||
Name = &apos;Product&apos;||
Name = &apos;Revenue Forecasting&apos;||
Name = &apos;Bundling&apos;||
Name = &apos;Product Rules&apos;||
Name = &apos;Price Rules&apos;,
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If marked True, this Badge or User Badge is related to ATG’s myTrailhead CPQ Solution Training. </inlineHelpText>
    <label>myT CPQ Solution Training</label>
    <type>Checkbox</type>
</CustomField>