force-app/main/default/objects/trailheadapp__Badge__c/fields/myT_Monetization_Ecosystem_Training__c.field-meta.xml
<CustomField>
    <fullName>myT_Monetization_Ecosystem_Training__c</fullName>
    <description>Used for filtering myT content.</description>
    <formula>IF (
				Name = &apos;CPQ Defined&apos;,
				true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If marked True, this Badge or User Badge is related to ATG’s Monetization Ecosystem Training. </inlineHelpText>
    <label>myT Monetization Ecosystem Training</label>
    <type>Checkbox</type>
</CustomField>