force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Total_Badges_Awarded__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Total_Badges_Awarded__c</fullName>
    <label>Total Badges Awarded</label>
    <summaryFilterItems>
        <field>trailheadapp__User_Badge__c.trailheadapp__Finished_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>trailheadapp__User_Badge__c.trailheadapp__Badge__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>