force-app/main/default/objects/trailheadapp__Badge__c/listViews/All_myTrailhead_Badges.listView-meta.xml
<ListView>
    <fullName>All_myTrailhead_Badges</fullName>
    <columns>NAME</columns>
    <columns>trailheadapp__Level__c</columns>
    <columns>trailheadapp__Type__c</columns>
    <columns>trailheadapp__Total_Badges_Awarded__c</columns>
    <columns>trailheadapp__Total_Badges_In_Progress__c</columns>
    <columns>trailheadapp__Created_At__c</columns>
    <columns>trailheadapp__Badge_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>trailheadapp__Namespace__c</field>
        <operation>equals</operation>
        <value>atginfo</value>
    </filters>
    <label>All myTrailhead Badges</label>
</ListView>